# Antares-AI

./: README.md
antares-ai/: package.json
antares-ai/src/: App.vue
antares-ai/src/components/: AppHeader.vue  ImageCanvas.vue
antares-ai/src/composables/: useImageEditor.ts  useImageEditorWasm.ts
antares-ai/src/core/: CanvasEngine.ts
antares-ai/src/filters/: DuotoneFilterWasm.ts  HighlightsShadowsFilter.ts  HighlightsShadowsFilterWasm.ts  TemperatureTintFilterWasm.ts  VibranceFilter.ts  VibranceFilterWasm.ts
antares-ai/src/router/: index.ts
antares-ai/src/utils/: images.ts
antares-ai/src/utils/color/: index.ts  transform.ts
antares-ai/src/views/: HomeView.vue  TrainingDataHistoryView.vue
antares-ai/src/wasm/: WasmFilterEngine.ts
antares_core/: main.py  models.py  schemas.py
antares_core/migrations/versions/: 20260711_1518_7966243b33b0_add_user_filter_data.py
antares_core/routers/: filter_data.py  training_data_history.py
antares_wgpu/: Cargo.toml
antares_wgpu/src/: lib.rs
antares_wgpu/src/filters/: duotone.rs  mod.rs  vibrance.rs
antares_wgpu/src/gpu/: duotone.rs  mod.rs  vibrance.rs
antares_wgpu/src/shaders/: duotone.wgsl  vibrance.wgsl
antares_wgpu/src/shaders/common/: color.wgsl
antares_wgpu/src/utils/: mod.rs
