[package]
name = "antares_wgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.56"
futures-channel = "0.3.31"
bytemuck = { version = "1.24.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["wgsl", "webgpu"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "30.0.0", default-features = false, features = ["wgsl", "vulkan", "metal", "dx12"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.76"

[profile.release]
# Optimize for small WASM binary size
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
